# Nickel

./: CMakeLists.txt
.cache/clangd/index/: Camera.cpp.A53F15B0B2D52759.idx  Camera.h.799FFE83216060BF.idx  Chunk.cpp.B94EC97EFDAAF879.idx  Chunk.h.21DD89978FC89BF1.idx  Components.h.EC58025E57414C14.idx  Controller.cpp.754E8F76C8315187.idx  Controller.h.126B9B5FD08B7282.idx  Entity.cpp.E1BFD3A79B3A8F44.idx  Entity.h.15122F8E342AA8C4.idx  EntityCenter.cpp.765234A53348E255.idx  EntityCenter.h.B4070B0D61770F59.idx  EntityManager.cpp.BC3F3AF2B95F7ABB.idx  EntityManager.h.0837A94E97EDF93F.idx  GameLoop.cpp.BCE76498F5EDA49A.idx  GameRender.cpp.BD780546ECB119A6.idx  GameRender.h.FBC8DDEF14BC2A15.idx  MovementSystem.cpp.89751E32C4338A2D.idx  MovementSystem.h.9580A14B6E4A5BBD.idx  Render.cpp.7D108D80D004E7A7.idx  Render.h.BA72B874DEB9D5B0.idx  SCamera.cpp.F2D85634C5A28E3F.idx  SCamera.h.56B7B91BB3997F4A.idx  SRender.cpp.56503E87B7202CAD.idx  SRender.h.2456E7D13D2ED56C.idx  Scene.cpp.6D205DFDB05EFB5D.idx  Scene.h.80D863ED8568F31E.idx  Test.cpp.2C155D5EB578CB6D.idx  TransformComponent.h.8B92B3445D1C648B.idx  cyCore.h.00758C42AE6D3B91.idx  cyGL.h.B3EB14F99752FF0D.idx  cyMatrix.h.78913C05C2A5315D.idx  cyTriMesh.h.9DBAF0A5B9B6B30E.idx  cyVector.h.42B0937AD1F98D98.idx  main.cpp.086466F444B8D8C4.idx  window.cpp.DAB47D5F6A7E2D5C.idx  window.h.803710CC3B67271A.idx
include/: Camera.h  Chunk.h  Components.h  Controller.h  Entity.h  EntityCenter.h  EntityManager.h  GameRender.h  Scene.h  TransformComponent.h  window.h
include/systems/: CameraSystem.h  MovementSystem.h  Render.h  SCamera.h  SRender.cpp  SRender.h
shaders/: shader.frag  vert.vert
src/: Camera.cpp  CameraSystem.cpp  Chunk.cpp  Controller.cpp  Entity.cpp  EntityCenter.cpp  EntityManager.cpp  GameLoop.cpp  GameRender.cpp  MovementSystem.cpp  Render.cpp  SCamera.cpp  SRender.cpp  Scene.cpp  main.cpp  window.cpp
tests/: Test.cpp
